--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    margin-left: 255px;
+    font-family: 'Poppins', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #EDF4EE;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    --titles-color: #57C49A;
+    --text-color: #868686;
+    --light-text-color: #BEBEBE;
+    --highlighted-text-color: #474747;
 }
+
+h1,
+h2,
+h3,
+p {
+    margin: 0;
+}
+
+body * { 
+    font-family: 'Poppins', sans-serif;
+ };
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.center {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--titles-color);
+}
+
+h2 {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--titles-color);
+}
+
+h3 {
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--highlighted-text-color);
+}
+
+h4 {
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: var(--text-color);
+}
+
+p {
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: var(--light-text-color);
+}
+
+
+.main__wrapper {
+    max-width: 1145px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+
+
+
