--- a/src/patients/components/singlePatient/PatientCard.css
+++ b/src/patients/components/singlePatient/PatientCard.css
@@ -48,6 +48,9 @@
 
 
   .patient-card__buttons {
-      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       margin-bottom: 10px;
+      column-gap: 10px;
   }
