--- a/src/appointments/components/AppointmentsTable.css
+++ b/src/appointments/components/AppointmentsTable.css
@@ -7,3 +7,9 @@
     text-align: center;
 }
 
+.appointments-table__filters {
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+    margin-bottom: 30px;
+}
