--- a/src/appointments/components/AppointmentsTable.css
+++ b/src/appointments/components/AppointmentsTable.css
@@ -18,3 +18,10 @@
     text-align: center;
     margin: 20px;
 }
+
+.all-appointment-table-container {
+
+    max-height: 800px;
+    overflow:auto;
+
+}
